find_package(Doxygen)
option(BUILD_DOCS "Build API docs?" "${DOXYGEN_FOUND}")
if(BUILD_DOCS)
    find_package(Doxygen REQUIRED)
    set(DOXYGEN_MACRO_EXPANSION YES)
    set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
    set(DOXYGEN_STRIP_FROM_INC_PATH "${CMAKE_SOURCE_DIR}/include")
    set(DOXYGEN_STRIP_FROM_PATH "${CMAKE_SOURCE_DIR}" "${CMAKE_SOURCE_DIR}/include")
    doxygen_add_docs(api-docs ../src ../include)
endif()
